--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static "style.css" %}">
   </head>
   <body>
-
+    <a href="{% url 'create_post' %}">Create new post</a> | <a href="{% url 'home' %}">Home</a>
     {% block content_block %}
 
     {% endblock %}
