--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -6,7 +6,7 @@
   <h4>{{post.title}} </h4>
   <p> <small> Author: {{post.author}}</small> </p>
   <p>{{post.body}}</p>
-  <a href="{% url 'update_post' post.pk %}">Edit Post</a>
+  <a href="{% url 'update_post' post.pk %}">Edit Post</a> | <a href="{% url 'delete_post' post.pk %}">Delete Post</a>
 </div>
 
 {% endblock %}
