--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="{% static "style.css" %}">
   </head>
   <body>
-    <a href="{% url 'create_post' %}">Create new post</a> | <a href="{% url 'home' %}">Home</a>
+    <p>{{post.slug}}</p>
+    <a href="{% url 'blog:create_post' %}">Create new post</a> | <a href="{% url 'blog:home' %}">Home</a>
 
     {% if user.is_authenticated %}
       <p>Welcome, {{user.username}}</p> (<a href="{% url 'logout' %}">Logout</a>)
