--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -4,9 +4,12 @@
 
 <div class="">
   <h4>{{post.title}} </h4>
+  <small>published at: {{post.created_date}}</small> | <small>Updated at: {{post.updated_date}}</small>
   <p> <small> Author: {{post.author}}</small> </p>
   <p>{{post.body}}</p>
-  <a href="{% url 'update_post' post.pk %}">Edit Post</a> | <a href="{% url 'delete_post' post.pk %}">Delete Post</a>
+  <p>{{post.slug}}</p>
+  <a href="{% url 'blog:update_post' post.slug %}">Edit Post</a> | <a href="{% url 'blog:delete_post' post.slug %}">Delete Post</a>
+  {# <a href="{{post.get_absolute_url}}">Edit Post</a> | <a href="{{post.get_absolute_url}}">Delete Post</a> #}
 </div>
 
 {% endblock %}
