--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="{% static "style.css" %}">
   </head>
   <body>
-    <p>{{post.slug}}</p>
-    <a href="{% url 'blog:create_post' %}">Create new post</a> | <a href="{% url 'blog:home' %}">Home</a>
+    {% if user is not user.is_authenticated %}
+      <a href="{% url 'blog:create_post' %}">Create new post</a> | <a href="{% url 'blog:home' %}">Home</a>
+    {% else %}
+      <a href="{% url 'login' %}">Log In</a>
+    {% endif %}
 
     {% if user.is_authenticated %}
       <p>Welcome, {{user.username}}</p> (<a href="{% url 'logout' %}">Logout</a>)
