--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="{% static "style.css" %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="container">
     {% if user is not user.is_authenticated %}
       <a href="{% url 'blog:create_post' %}">Create new post</a> | <a href="{% url 'blog:home' %}">Home</a>
     {% else %}
@@ -25,5 +26,8 @@
     {% block content_block %}
 
     {% endblock %}
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
 </html>
