--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -1,14 +1,60 @@
 {% extends "blog/base.html" %}
 
 {% block content_block %}
+
 <h3>All Post</h3>
 
+
+<div class="row border-0 shadow-none d-flex align-items-stretch">
 {% for post in all_post %}
-  <div class="">
-    <h4><a href="{% url 'blog:detail' post.slug %}">{{post.title}}</a> </h4>
-    <p> <small> Author: {{post.author}}</small> </p>
+  <div class="col-4 border-0 shadow-none">
+    <div class="card">
+      <img class="card-img-top" src="https://fakeimg.pl/250x100/" alt="Card image cap">
+      <h5 class="card-title"><a href="{% url 'blog:detail' post.slug %}">{{post.title}}</a></h5>
+      <small class="text-muted">Author: {{post.author}}</small>
+
+      <p class="card-text">{{post.body|truncatechars:180}} <a href="{% url 'blog:detail' post.slug %}">read</a> </p>
+
+      <small class="text-muted">Last updated {{post.updated_date}} ago</small>
+    </div>
   </div>
 {% endfor %}
+</div>
+
+
+
+
+
+
+
+<!-- {% for post in all_post %} -->
+<!-- <div class="">
+    <h4><a href="{% url 'blog:detail' post.slug %}">{{post.title}}</a> </h4>
+    <p> <small> Author: {{post.author}}</small> </p>
+  </div> -->
+
+<!-- <div class="">
+  <div class="">
+    <div class="card-deck">
+      <div class="row">
+        {% for post in all_post %}
+        <div class="card">
+          <img class="card-img-top" src="https://fakeimg.pl/250x100/" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title"><a href="{% url 'blog:detail' post.slug %}">{{post.title}}</a></h5>
+            <small class="text-muted">Author: {{post.author}}</small>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated {{post.updated_date}} ago</small>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+
+</div> -->
+<!-- {% endfor %} -->
 
 
 {% endblock %}
